force-app/main/default/objects/Logging__c/Logging__c.object-meta.xml
<CustomObject>
    <description>Used for logging internal data</description>
    <label>Logging</label>
    <nameField>
        <displayFormat>Log-A-{000000}</displayFormat>
        <label>Logging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loggings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>