force-app/main/default/objects/Logging__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inquiry_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>30% regel</fullName>
            </value>
            <value>
                <fullName>Ægtepagt</fullName>
            </value>
            <value>
                <fullName>Afklaring omkring emne</fullName>
            </value>
            <value>
                <fullName>Andet (Se note)</fullName>
            </value>
            <value>
                <fullName>Arvefordeling</fullName>
            </value>
            <value>
                <fullName>Båndlæggelse</fullName>
            </value>
            <value>
                <fullName>Beboelsesret</fullName>
            </value>
            <value>
                <fullName>Betalingsproblem</fullName>
            </value>
            <value>
                <fullName>Boafgift og skat</fullName>
            </value>
            <value>
                <fullName>Booking/afbooking af foredrag</fullName>
            </value>
            <value>
                <fullName>Børnetestamente</fullName>
            </value>
            <value>
                <fullName>Dubletemne</fullName>
            </value>
            <value>
                <fullName>Ejendomshandel</fullName>
            </value>
            <value>
                <fullName>Feature idea</fullName>
            </value>
            <value>
                <fullName>Fejl ved emne</fullName>
            </value>
            <value>
                <fullName>Fremtidsfuldmagt rækkefølge</fullName>
            </value>
            <value>
                <fullName>Genstandslegat</fullName>
            </value>
            <value>
                <fullName>Gravstedsvedligeholdelse</fullName>
            </value>
            <value>
                <fullName>IT udfordringer (Ift. proces)</fullName>
            </value>
            <value>
                <fullName>IT vedligehold (Hardware)</fullName>
            </value>
            <value>
                <fullName>IT vedligehold (Software)</fullName>
            </value>
            <value>
                <fullName>Juridisk</fullName>
            </value>
            <value>
                <fullName>Konverteringsproblem</fullName>
            </value>
            <value>
                <fullName>Ledelse</fullName>
            </value>
            <value>
                <fullName>Manglende forståelse</fullName>
            </value>
            <value>
                <fullName>Mersalg (Rådgiver)</fullName>
            </value>
            <value>
                <fullName>Notar og tinglysning</fullName>
            </value>
            <value>
                <fullName>Rabatkode</fullName>
            </value>
            <value>
                <fullName>Report request</fullName>
            </value>
            <value>
                <fullName>Rettelser til dokumenter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>