force-app/main/default/objects/Logging__c/fields/Customer_Service_Log__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Log__c</fullName>
    <label>Customer Service Log</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andet (Se note)</fullName>
            </value>
            <value>
                <fullName>Spørgsmål internt (Se note)</fullName>
            </value>
            <value>
                <fullName>Spørgsmål til juristen</fullName>
            </value>
            <value>
                <fullName>Tilbagekald fra rådgiver</fullName>
            </value>
            <value>
                <fullName>Spørgsmål til tinglysning</fullName>
            </value>
            <value>
                <fullName>Spørgsmål til dokumenter</fullName>
            </value>
            <value>
                <fullName>Spørgsmål til proces</fullName>
            </value>
            <value>
                <fullName>Spørgsmål til faktura</fullName>
            </value>
            <value>
                <fullName>Booking/afbooking af foredrag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>