force-app/main/default/objects/Logging__c/fields/Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Type__c</fullName>
    <label>Inquiry Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>IT Department</fullName>
                <isActive>false</isActive>
                <label>IT Department</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>