force-app/main/default/objects/Logging__c/fields/IT_Department_Log__c.field-meta.xml
<CustomField>
    <fullName>IT_Department_Log__c</fullName>
    <label>IT Department Log</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andet (Se note)</fullName>
            </value>
            <value>
                <fullName>Juridisk</fullName>
            </value>
            <value>
                <fullName>Afklaring omkring emne</fullName>
            </value>
            <value>
                <fullName>IT vedligehold (Hardware)</fullName>
            </value>
            <value>
                <fullName>IT vedligehold (Software)</fullName>
            </value>
            <value>
                <fullName>Feature idea</fullName>
            </value>
            <value>
                <fullName>Fejl ved emne</fullName>
            </value>
            <value>
                <fullName>Dubletemne</fullName>
            </value>
            <value>
                <fullName>Spørgsmål til funktionalitet</fullName>
            </value>
            <value>
                <fullName>Report request</fullName>
            </value>
            <value>
                <fullName>Salesforce bug</fullName>
            </value>
            <value>
                <fullName>Konverteringsproblem</fullName>
            </value>
            <value>
                <fullName>Betalingsproblem</fullName>
            </value>
            <value>
                <fullName>Rabatkode</fullName>
            </value>
            <value>
                <fullName>Ledelse</fullName>
            </value>
            <value>
                <fullName>Salgstræning</fullName>
            </value>
            <value>
                <fullName>Spørgsmål til journal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>