force-app/main/default/objects/Logging__c/fields/Legal_Log__c.field-meta.xml
<CustomField>
    <fullName>Legal_Log__c</fullName>
    <label>Legal Log</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30% regel</fullName>
            </value>
            <value>
                <fullName>Andet (Se note)</fullName>
            </value>
            <value>
                <fullName>Arvefordeling</fullName>
            </value>
            <value>
                <fullName>Beboelsesret</fullName>
            </value>
            <value>
                <fullName>Boafgift og skat</fullName>
            </value>
            <value>
                <fullName>Båndlæggelse</fullName>
            </value>
            <value>
                <fullName>Børnetestamente</fullName>
            </value>
            <value>
                <fullName>Ejendomshandel</fullName>
            </value>
            <value>
                <fullName>FF rækkefølge</fullName>
            </value>
            <value>
                <fullName>Genstandslegat</fullName>
            </value>
            <value>
                <fullName>Gravstedsvedligeholdelse</fullName>
            </value>
            <value>
                <fullName>Manglende forståelse</fullName>
            </value>
            <value>
                <fullName>Notar og tinglysning</fullName>
            </value>
            <value>
                <fullName>Virksomhedsrelateret</fullName>
            </value>
            <value>
                <fullName>Skræddersyet</fullName>
            </value>
            <value>
                <fullName>Stamdata</fullName>
            </value>
            <value>
                <fullName>Successionsrækkefølge</fullName>
            </value>
            <value>
                <fullName>Sumlegat</fullName>
            </value>
            <value>
                <fullName>Særeje</fullName>
            </value>
            <value>
                <fullName>Testationsret</fullName>
            </value>
            <value>
                <fullName>Tvangsarv</fullName>
            </value>
            <value>
                <fullName>Udenlandske forhold</fullName>
            </value>
            <value>
                <fullName>Uskiftet Bo</fullName>
            </value>
            <value>
                <fullName>Ægtepagt</fullName>
            </value>
            <value>
                <fullName>Legat</fullName>
                <isActive>false</isActive>
                <label>Legat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>