force-app/main/default/objects/Logging__c/fields/Log_note__c.field-meta.xml
<CustomField>
    <fullName>Log_note__c</fullName>
    <label>Log note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>