force-app/main/default/objects/Logging__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For choosing person who made the request</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loggings</relationshipName>
    <type>Lookup</type>
</CustomField>