force-app/main/default/objects/Logging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inquiry_Type__c</columns>
    <columns>Category__c</columns>
    <columns>Customer_Service_Log__c</columns>
    <columns>IT_Department_Log__c</columns>
    <columns>Log_note__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>